# Kaggle

./: .gitignore  README.md
HillaryClintonEmails/: README.md
HillaryClintonEmails/notebooks/: 01 - Topic Modelling.ipynb
HousePriceRegression/: README.md  pyproject.toml
HousePriceRegression/notebooks/: 01 - Exploratory Data Analysis.ipynb  02 - Feature Engineering and Models.ipynb  02 - Feature Engineering.ipynb  03 - Model Averaging and Stacking.ipynb
