[tool.poetry]
name = "house-price-regression"
version = "0.1.0"
description = "Playground for Kaggle house price regression."
homepage = "https://github.com/blaahhrrgg/Kaggle/HousePriceRegression"
repository = "https://github.com/blaahhrrgg/Kaggle/HousePriceRegression"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "3.11.5"
numpy = "^1.24.3"
pandas = "^2.0.3"
cvxpy = "^1.3.2"
jupyter = "1.0.0"
matplotlib = "3.7.2"
seaborn = "0.12.2"
statsmodels = "^0.14.0"
scikit-learn = "1.3.0"


[virtualenvs]
create = true
in-project = true

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/__init__.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 0

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]

branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
upload_to_release = false
upload_to_pypi = false
remove_dist = false
patch_without_tag = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
